--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="location_access_required">Location access is required to display the Location preview.</string>
     <string name="ok">OK</string>
     <string name="location_permission_not_available">Permission is not available. Requesting location permission.</string>
-    <string name="location_permission_available">location permission is available. Starting preview.</string>
-    <string name="location_permission_granted">location permission was granted. Starting preview.</string>
+    <string name="location_permission_available">location permission is available. Starting preview Location.</string>
+    <string name="location_permission_granted">location permission was granted. Starting preview Location.</string>
     <string name="location_permission_denied">location permission request was denied.</string>
+    <string name="press_below_button_to_get_current_location">Press below Button to get current Location!</string>
+    <string name="get_location">Get Location</string>
 </resources>
